--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,43 @@
-.App {
-  text-align: center;
+.App{
+  padding-top: 1rem;
+  min-height: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.loader {
-  width: 48px;
-  height: 48px;
-  border: 3px solid #FFF;
-  border-radius: 50%;
-  display: inline-block;
+.app-container{
   position: relative;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
 }
-.loader::after {
-    content: '';  
-  box-sizing: border-box;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 3px solid transparent;
-    border-bottom-color: #FF3D00;
+.header-container{
+  position: absolute;
+  right: 0;
+  left: 0;
+  margin: auto;
+  width: 100%;
 }
-    
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-} 
+.header-links-container{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-links-container a {
+  color: #22d3ee;
+  text-decoration: none;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+}
+.social-icons-container{
+  display: flex;
+  gap: 10px;
+}
+
+.bold{
+  font-weight: 700;
+}
+
+@media (max-width: 1250px) {
+  /* … */
+  .app-container{
+    width: 90%;
   }
 }
