--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,25 @@
   font-weight: 700;
 }
 
+footer{
+  margin-top: 50px;
+  height: 100px;
+  background-color: #090d14;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-body{
+  width: 40%;
+}
+
 @media (max-width: 1250px) {
   /* … */
   .app-container{
+    width: 90%;
+  }
+  .footer-body{
     width: 90%;
   }
 }
