--- a/src/components/custom-button/CustomButton.css
+++ b/src/components/custom-button/CustomButton.css
@@ -8,4 +8,14 @@ button{
 
     min-width: 150px;
     padding: 10px;
+
+    cursor: pointer;
+
+    transition: 0.5s;
+}
+
+button:hover{
+    background-color: var(--secondary-color);
+    border-color: var(--secondary-color);
+    color: #070a11;
 }
