--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -8,7 +8,7 @@
 }
 
 .hero{
-    height: 95vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,7 +33,9 @@
 
 @media (max-width: 1250px) {
     /* … */
-
+    .hero{
+        height: 90vh;
+    }
     .actions-container{
         display: flex;
         justify-content: center;
