--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -8,7 +8,7 @@
 }
 
 .hero{
-
+    min-height: 60vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,6 +18,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.description{
+   font-size: 18px;
 }
 
 .image-hero{
@@ -50,7 +54,7 @@
     .title{
         text-align: center;
     }
-    p{
+    .description{
         text-align: center;
     }
   }
