--- a/src/components/custom-button/toggleButton/ToggleButton.css
+++ b/src/components/custom-button/toggleButton/ToggleButton.css
@@ -1,20 +1,20 @@
-.toggleButton{
-    background-color: transparent;
-    border-color: var(--secondary-color);
-    color: var(--secondary-color);
-    outline: none;
-    border-style: solid;
+.toggleButton {
+  background-color: transparent;
+  border-color: var(--secondary-color);
+  color: var(--secondary-color);
+  outline: none;
+  border-style: solid;
 
-    width: 50px;;
-    padding: 5px;
+  width: 50px;
+  padding: 5px;
 
-    cursor: pointer;
+  cursor: pointer;
 
-    transition: 0.5s;
+  transition: 0.5s;
 }
 
-.toggleButton-active{
-    background-color: var(--secondary-color);
-    border-color: var(--secondary-color);
-    color: #070a11;
+.toggleButton-active {
+  background-color: var(--secondary-color);
+  border-color: var(--secondary-color);
+  color: #070a11;
 }
