--- a/src/components/title/Title.css
+++ b/src/components/title/Title.css
@@ -6,6 +6,7 @@
 }
 .icon-container {
   position: relative;
+  color: var(--secondary-color);
 }
 .icon-blur {
   right: 0;
@@ -14,7 +15,8 @@
   top: 0;
   position: absolute;
   background-color: #22d3ee60;
-  filter: blur(18px);
+  filter: blur(25px);
+  border-radius: 50%;
   width: 40px;
   height: 40px;
 }
