--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   background-color: var(--primary-color);
   scroll-behavior: smooth;
   background-image: url("../src/assets/images/bg-grid.png");
-
+  overflow-x: hidden;
 }
 
 code {
