--- a/src/components/custom-button/CustomButton.css
+++ b/src/components/custom-button/CustomButton.css
@@ -1,21 +1,35 @@
-.customButton{
+.customButton {
+    position: relative;
     background-color: var(--primary-color);
-    border-color: var(--secondary-color);
+    border: 2px solid var(--secondary-color);
     color: var(--secondary-color);
-    outline: none;
-    border-style: solid;
     border-radius: 40px;
-
     min-width: 150px;
     padding: 10px;
-
     cursor: pointer;
-
-    transition: 0.5s;
+    text-transform: uppercase;
+    font-size: 12px;
+    overflow: hidden; /* Oculta el contenido que desborde */
+    font-weight: 700;
 }
 
-.customButton:hover{
+.customButton::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-color: var(--secondary-color);
-    border-color: var(--secondary-color);
-    color: #070a11;
+    transform-origin: left; /* Punto de origen para la animación */
+    transform: scaleX(0); /* Inicialmente sin ancho */
+    transition: transform 0.2s ease-in-out; /* Transición de la propiedad 'transform' */
+    z-index: -1;
+}
+.customButton:hover{
+    color: var(--primary-color);
+    z-index: 1;
+}
+.customButton:hover::before {
+    transform: scaleX(1); /* Ancho completo al hacer hover */
 }
